--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
     <action android:name="android.intent.action.VIEW" />
     <data android:scheme="https" />
   </intent>
-  <intent>
+  <!-- <intent>
     <action android:name="android.support.customtabs.action.CustomTabsService" />
-  </intent>
+  </intent> -->
 </queries>
     <application
        
